--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "11.11.6",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
+    "rbx": "^2.1.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
@@ -28,7 +29,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "bulma": "^0.7.4",
     "node-sass": "^4.11.0"
   }
 }
