--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.11.0"
+    "@types/ramda": "github:types/npm-ramda#dist",
+    "node-sass": "^4.11.0",
+    "ramda": "^0.26.1"
   }
 }
