--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "11.11.6",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
+    "hookrouter": "^1.1.4",
     "rbx": "^2.1.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
